Update to TC Server API 2018.1.2

--- a/tcwebhooks-rest-api/pom.xml
+++ b/tcwebhooks-rest-api/pom.xml
@@ -326,6 +326,14 @@
 		    <artifactId>jersey-test-support</artifactId>
 		    <version>1.0</version>
 		    <scope>test</scope>
-	    </dependency>		
+	    </dependency>
+
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>1.8.3</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 </project>
